<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <ImageView
        android:id="@+id/splashscreenimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/splash_text1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_class_r" />

    <TextView
        android:id="@+id/splash_text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"

        android:text="@string/splash_text1"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/splash_text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/splash_text2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/splash_text3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/splash_text3"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/copyright_txtv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/copyright_reserved"
        android:textAlignment="center"
        android:textColor="@color/black" />
</RelativeLayout>