<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"

   >
    <ImageView android:id="@+id/authimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_class_r"
        android:layout_centerHorizontal="true"
      android:layout_marginTop="50dp"
       />

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/authimg"
        android:layout_marginTop="20dp"
        app:loading_width="5dp"
        app:loading_color="@color/red900"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/email_auth_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="40dp"
      android:drawableLeft="@drawable/ic_lock"
        android:textColorHint="@color/grey700"
        android:text="med@gmail.com"
android:layout_centerVertical="true"


       />



    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/email_auth_editext"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="12dp"
android:background="@color/red900"
        android:text="@string/login_btn_str"

        android:textColor="@color/white"/>
    <Button
        android:id="@+id/add_acount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btn_login"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="12dp"
        android:background="@color/logo_color"
        android:text="@string/add_parent"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/splash_text4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_text4"
        android:layout_centerHorizontal="true"
       android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"/>




</RelativeLayout>